--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ko">
-<head th:replace="admin/layout :: admin-head('관리자 - 사용자 관리')"></head>
+<head th:replace="~{admin/layout :: admin-head('관리자 - 사용자 관리')}"></head>
 <body>
-    <nav th:replace="admin/layout :: admin-nav"></nav>
+    <nav th:replace="~{admin/layout :: admin-nav}"></nav>
 
     <div class="container-fluid mt-4">
         <div class="row">
             <!-- 사이드바 -->
-            <div th:replace="admin/layout :: admin-sidebar('users')"></div>
+            <div th:replace="~{admin/layout :: admin-sidebar('users')}"></div>
 
             <!-- 메인 콘텐츠 -->
             <div class="col-md-9">
@@ -113,6 +113,6 @@
         </div>
     </div>
 
-    <div th:replace="admin/layout :: admin-scripts"></div>
+    <div th:replace="~{admin/layout :: admin-scripts}"></div>
 </body>
 </html>
